# USTC-MultiMedia

./: Cargo.toml
src/: main.rs  mci_backend.rs  mmio_backend.rs
ui/: app.slint
