[package]
name = "exp"
version = "0.1.0"
edition = "2024"

# [dependencies]
# windows = "0.62.2"
[dependencies]
slint = "1.14.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media",
] }

[build-dependencies]
slint-build = "1.14.1"
